--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -36,7 +36,7 @@ const orientationClasses = {
 
 // updated colors and thickness
 const baseClasses =
-  'before:bg-theme-neutral after:bg-theme-neutral text-theme-content-weak'
+  'before:bg-theme-700 after:bg-theme-700 text-theme-content-300'
 
 const lineClasses = {
   horizontal: 'before:h-[2px] after:h-[2px]',
