--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -9,17 +9,17 @@ const { class: className } = Astro.props
 <article
   class:list={[
     'prose',
-    'prose-headings:font-bold prose-headings:text-theme-content',
-    'prose-p:text-theme-content',
-    'prose-strong:text-theme-content-strong',
-    'prose-em:text-theme-content-strong',
-    'prose-code:bg-theme-neutral prose-code:text-theme-content-strong',
-    'prose-blockquote:text-theme-content-weak',
-    'prose-figcaption:text-theme-content-weak',
-    'prose-lead:text-theme-content-strong',
-    'prose-ul:text-theme-content-weak',
-    'prose-ol:text-theme-content-weak',
-    'prose-li:text-theme-content-weak',
+    'prose-headings:text-theme-200] prose-headings:font-bold',
+    'prose-p:text-theme-300]',
+    'prose-strong:text-theme-200]',
+    'prose-em:text-theme-200]',
+    'prose-code:text-theme-200] prose-code:bg-bg-focused',
+    'prose-blockquote:text-theme-500]',
+    'prose-figcaption:text-theme-500]',
+    'prose-lead:text-theme-200]',
+    'prose-ul:text-theme-500]',
+    'prose-ol:text-theme-500]',
+    'prose-li:text-theme-500]',
     'prose-img:mx-auto prose-img:my-auto',
     className,
   ]}>
