--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -130,9 +130,9 @@ const finalRel = [rel, externalInNewTab ? 'noopener' : null]
     'inline-flex items-center gap-2',
     'transition-colors duration-300 ease-in-out',
     underline ?
-      'underline decoration-theme-primary/65 underline-offset-2 hover:decoration-theme-primary'
+      'underline decoration-theme-300 underline-offset-2 hover:decoration-theme-accent'
     : 'no-underline',
-    'hover:text-theme-primary',
+    'hover:text-theme-accent',
     className,
   )}
   {...itemprop ? { itemprop } : {}}
