feat(content): add 'this website' blog post and site attributions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,17 +52,15 @@ const topTracks = await fetchTopTracks(
   <Prose class='main-content space-y-4'>
     <Heading title="Hello, I'm Chip " />
     <p>
-      I make rotten things on the internet.
-      <br />
-      <br />
-      This website serves as my personal blog for my various thoughts on art, games,
-      and software that I couldn't fit on my <Link
+      I make rotten things on the internet. This website serves as my personal
+      blog where I dump my various thoughts on art, games, and software that I
+      couldn't fit on my <Link
         href='https://x.com/fractalcounty'
         title='X'
         externalInNewTab={true}
         >Twitter.
-      </Link> It's also an archive of my artwork, webcomics, music, and other creative
-      endeavors from over the years.
+      </Link> It also serves as an unorganized archive of my artwork, webcomics,
+      music, and other miscellaneous creative endeavors from over the years.
     </p>
   </Prose>
 
