docs(unlicense): update blog post link in site attributions

--- a/src/pages/unlicense.astro
+++ b/src/pages/unlicense.astro
@@ -72,7 +72,8 @@ import PageLayout from '@/layouts/PageLayout.astro'
       </li>
       <li>
         For more information about the technologies used to build this site,
-        please refer to my <Link href='/blog/this-site'>blog post</Link> about it.
+        please refer to my <Link href='/blog/this-website'>blog post</Link> about
+        it.
       </li>
     </ul>
   </Prose>
